image, jumbotron and h1 added, correct color and extra small screen center wrapped, still not yet showing header on 1 line on small or larger screens.

--- a/PriceQuotation/wwwroot/css/custom.css
+++ b/PriceQuotation/wwwroot/css/custom.css
@@ -6,6 +6,7 @@
 h1 {
     margin-top: 0;
     color: navy;
+    font-size: 4rem;
 }
 
 label {
